--- a/view/article/css3D_fr.html
+++ b/view/article/css3D_fr.html
@@ -84,18 +84,14 @@
 </div>
 
 <div class="container col-10 text-justify mb-3">
-    <p>Je vais vous présenter le travail de David DeSandro sur la création de volume en 3D avec CSS.</p>
-    <p>Bien que la 3D existe depuis longtemps dans le web avec canvas, Three.js (WebGL) ou encore notre
-        défunt Flash.
+    <p>Je vais vous présenter le travail de David DeSandro sur la création de volumes en 3D avec CSS. </p>
+    <p>Bien que la 3D existe depuis longtemps dans le web avec canvas, Three.js (anciennement WebGL) ou encore notre défunt Flash.
         Depuis 2009, les développeurs peuvent profiter du module de transformation CSS 3D.
-        Ce fut un soulagement pour les front-ends qui jusqu'à ce moment s'armaient de patience à la maîtrise d'un
-        langage tiers pour donner ne serait ce qu'un peu de volume à leur site.</p>
-    <p>Ce tutoriel, vous propose le cheminement de construction d'un volume 3D, étapes par étapes.
+        ce fut un soulagement pour les front-end qui, jusqu'alors, s'armaient de patience à la maîtrise d'un langage tiers pour donner ne serait-ce qu'un peu de volume à leur site.</p>
+    <p>Ce tutoriel, vous propose le cheminement de construction d'un volume 3D, étape par étape.
         En commençant par une simple perspective d'une surface plane jusqu'à un carrousel 3D interactif.
-        Ici pas de chipotage, il va à l'essentiel et pour les plus flemmards d'entre nous, un CodePen est fourni à
-        chaque étape.</p>
-    <p>Sans plus attendre, voici le lien vers ce tutoriel, aussi intéressant qu'enrichissant, une fois maîtrisé vous
-        donneras un panel de perspective pour votre site.</p>
+        Ici, pas de chipotage, il va à l'essentiel et, pour les plus flemmards d'entre nous, un CodePen est fourni à chaque étape.</p>
+    <p>Sans plus attendre, voici le lien vers ce tutoriel, aussi intéressant qu'enrichissant et qui, une fois maîtrisé, vous donnera un panel de perspectives pour votre site.</p>
     <a href="https://3dtransforms.desandro.com/" target="_blank">https://3dtransforms.desandro.com/</a>
     <p>Bon code.</p>
 </div>
